Completed navigation area on header section.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
 
 <body>
     <header>
+        <div class="container">
+            <div class="navigation">
 
+                <div class="logo">
+                    <h1>Influencer products</h1>
+                </div>
+                <div class="main-menu">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Sign up</a></li>
+                            <li><a href="#">Log In</a></li>
+                            <li><a href="#"><img src="assets/images/icons/search.svg" alt="Search icons"></a></li>
+                            <li><a href="#"><img src="assets/images/icons/cart.svg" alt="Cart icons"></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 
