Added some comments on header section.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
+    <!-- Header Area Start -->
     <header>
-        <div class="container">
-            <div class="navigation">
-
+        <div class="container"> /*Container Start*/
+            <div class="navigation">/*Navigation Start*/
                 <div class="logo">
                     <h1>Influencer products</h1>
                 </div>
@@ -37,8 +37,8 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
-        </div>
+            </div>/*Navigation End*/
+        </div>/*Container End*/
     </header>
     <main>
 
