Added some comments on header section.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-    <!-- Header Area Start -->
+    <!-- Header Section Start -->
     <header>
-        <div class="container"> /*Container Start*/
-            <div class="navigation">/*Navigation Start*/
+        <Container class="container"> <!-- Container Start -->
+            <div class="navigation"><!-- Navigation Start -->
                 <div class="logo">
                     <h1>Influencer products</h1>
                 </div>
@@ -37,9 +37,10 @@
                         </ul>
                     </nav>
                 </div>
-            </div>/*Navigation End*/
-        </div>/*Container End*/
+            </div><!-- Navigation End -->
+            </div><!-- Container End -->
     </header>
+    <!-- Header Section End -->
     <main>
 
     </main>
