Completed Header section.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <body>
     <!-- Header Section Start -->
     <header>
-        <Container class="container"> <!-- Container Start -->
-            <div class="navigation"><!-- Navigation Start -->
+        <!-- Container Start -->
+        <div class="container">
+            <!-- Navigation Start -->
+            <div class="navigation">
                 <div class="logo">
                     <h1>Influencer products</h1>
                 </div>
@@ -37,8 +39,22 @@
                         </ul>
                     </nav>
                 </div>
-            </div><!-- Navigation End -->
-            </div><!-- Container End -->
+            </div>
+            <!-- Navigation End -->
+            <!-- Banner area Start -->
+            <div class="banner">
+                <div class="banner-content">
+                    <h1>Start your Journey as Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
+                        Lectus faucibus.</p>
+                    <a href="#" class="primary-btn">Preebook now</a>
+                </div>
+                <div class="banner-img">
+                    <img src="assets/images/main-camera.png" alt="">
+                </div>
+            </div>
+            <!-- Banner area End -->
+        </div><!-- Container End -->
     </header>
     <!-- Header Section End -->
     <main>
