Completed Brand section.

--- a/index.html
+++ b/index.html
@@ -57,9 +57,56 @@
         </div><!-- Container End -->
     </header>
     <!-- Header Section End -->
+    <!-- Main Area Start -->
     <main>
-
+        <!-- Brand Section Start -->
+        <section id="brand">
+            <!-- <hr> -->
+            <!-- Container Start -->
+            <div class="container">
+                <!-- Divider Start -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="1110" height="1" viewBox="0 0 1110 1" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M1110 1H0V0H1110V1Z"
+                        fill="url(#paint0_linear_35_33)" />
+                    <defs>
+                        <linearGradient id="paint0_linear_35_33" x1="0" y1="0" x2="1110" y2="1.00857"
+                            gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#C0CCDA" stop-opacity="0.1" />
+                            <stop offset="0.503785" stop-color="#C0CCDA" stop-opacity="0.6" />
+                            <stop offset="1" stop-color="#C0CCDA" stop-opacity="0.1" />
+                        </linearGradient>
+                    </defs>
+                </svg>
+                <!-- Divider End -->
+                <div class="brand-logo">
+                    <img src="assets/logos/Alibaba.svg" alt="Alibaba's Logo">
+                    <img src="assets/logos/Amazon.svg" alt="Alibaba's Logo">
+                    <img src="assets/logos/Daraz.svg" alt="Alibaba's Logo">
+                    <img src="assets/logos/Ebay.svg" alt="Alibaba's Logo">
+                    <img src="assets/logos/Rakuten.svg" alt="Alibaba's Logo">
+                    <img src="assets/logos/Walmart.svg" alt="Alibaba's Logo">
+                    <img src="assets/logos/Target.svg" alt="Alibaba's Logo">
+                </div>
+                <!-- Divider Start -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="1110" height="1" viewBox="0 0 1110 1" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M1110 1H0V0H1110V1Z"
+                        fill="url(#paint0_linear_35_33)" />
+                    <defs>
+                        <linearGradient id="paint0_linear_35_33" x1="0" y1="0" x2="1110" y2="1.00857"
+                            gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#C0CCDA" stop-opacity="0.1" />
+                            <stop offset="0.503785" stop-color="#C0CCDA" stop-opacity="0.6" />
+                            <stop offset="1" stop-color="#C0CCDA" stop-opacity="0.1" />
+                        </linearGradient>
+                    </defs>
+                </svg>
+                <!-- Divider End -->
+            </div>
+            <!-- Container End -->
+        </section>
+        <!-- Brand Section End -->
     </main>
+    <!-- Main Area End -->
     <footer>
 
     </footer>
