Completed Collection Section.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Manrope:wght@700&family=Poppins:wght@600;700&family=Roboto:wght@700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Manrope:wght@700&family=Poppins:wght@500;600;700&family=Roboto:wght@700&display=swap"
         rel="stylesheet">
 
     <!-- CSS Link Here -->
@@ -105,6 +105,150 @@
             <!-- Container End -->
         </section>
         <!-- Brand Section End -->
+        <!-- Collection Section Start -->
+        <section id="collection">
+            <div class="container">
+                <h2 class="section-title">Popular Collection</h2>
+                <div class="collection-container">
+                    <div class="collection-item">
+                        <img src="assets/images/tripod.png" alt="Flex tripod" class="product-img">
+                        <h3>Flex Tripod</h3>
+                        <p class="price">$50.48</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/mic.png" alt="Microphone" class="product-img">
+                        <h3>Microphone</h3>
+                        <p class="price">$120.25</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/airpod.png" alt="Airbuds" class="product-img">
+                        <h3>Airbuds</h3>
+                        <p class="price">$100.00</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/drone.png" alt="Drone" class="product-img">
+                        <h3>Drone</h3>
+                        <p class="price">$980.25</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/lights.png" alt="Light Setup" class="product-img">
+                        <h3>Light Setup</h3>
+                        <p class="price">$1200.00</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/setup.png" alt="Photoshoot set" class="product-img">
+                        <h3>Photoshoot set</h3>
+                        <p class="price">$50.48</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/camera.png" alt="Vlogging Camera" class="product-img">
+                        <h3>Vlogging Camera</h3>
+                        <p class="price">$1800.80</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/single-light.png" alt="Green Screen" class="product-img">
+                        <h3>Green Screen</h3>
+                        <p class="price">$25.48</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="collection-item">
+                        <img src="assets/images/action.png" alt="Action Camera" class="product-img">
+                        <h3>Action Camera</h3>
+                        <p class="price">$380.00</p>
+                        <div class="rating">
+
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/star.svg" alt="star">
+                            <img src="assets/images/icons/half-star.svg" alt="Half of star">
+                            <p>4.99</p>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Collection Section End -->
     </main>
     <!-- Main Area End -->
     <footer>
