Added a btn on Collaction section's bottom.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h1>Start your Journey as Influencer</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
                         Lectus faucibus.</p>
-                    <a href="#" class="primary-btn">Preebook now</a>
+                    <a href="#" class="primary-btn btn">Preebook now</a>
                 </div>
                 <div class="banner-img">
                     <img src="assets/images/main-camera.png" alt="">
@@ -107,6 +107,7 @@
         <!-- Brand Section End -->
         <!-- Collection Section Start -->
         <section id="collection">
+            <!-- Container Start -->
             <div class="container">
                 <h2 class="section-title">Popular Collection</h2>
                 <div class="collection-container">
@@ -246,7 +247,9 @@
                         <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
                     </div>
                 </div>
+                <a href="#" class="btn secodary-btn">See More</a>
             </div>
+            <!-- Container End -->
         </section>
         <!-- Collection Section End -->
     </main>
