Completed feature section.

--- a/index.html
+++ b/index.html
@@ -252,6 +252,23 @@
             <!-- Container End -->
         </section>
         <!-- Collection Section End -->
+        <!-- Feature Section Start -->
+        <section id="feature">
+            <!-- Container Start -->
+            <div class="container">
+                <div class="feature-img">
+                    <img src="assets/images/gear.png" alt="">
+                </div>
+                <div class="feature-content">
+                    <h2>Featured products at one place</h2>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <a href="#" class="btn primary-btn">Join Now</a>
+                </div>
+            </div>
+            <!-- Container End -->
+        </section>
+        <!-- Feature Section End -->
     </main>
     <!-- Main Area End -->
     <footer>
