Completed Footer section.

--- a/index.html
+++ b/index.html
@@ -271,9 +271,31 @@
         <!-- Feature Section End -->
     </main>
     <!-- Main Area End -->
+    <!-- Footer Section Start -->
     <footer>
-
+        <!-- Container Start -->
+        <div class="container">
+            <h2>Influencer Products</h2>
+            <p>Copyright © 2020 influencer products</p>
+            <p>All rights reserved</p>
+            <div class="social-links">
+                <a href="#">
+                    <img src="assets/images/icons/Instagram.svg" alt="Instagram">
+                </a>
+                <a href="#">
+                    <img src="assets/images/icons/Dribbble.svg" alt="Dribbble">
+                </a>
+                <a href="#">
+                    <img src="assets/images/icons/Twitter.svg" alt="Twitter">
+                </a>
+                <a href="#">
+                    <img src="assets/images/icons/Youtube.svg" alt="Youtube">
+                </a>
+            </div>
+        </div>
+        <!-- Container End -->
     </footer>
+    <!-- Footer Section End -->
 
 </body>
 
